@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-26T16:11:44Z",
-  "count_outdated" : 7345,
-  "uniques_outdated" : 3095,
-  "count" : 7546,
-  "uniques" : 3242,
+  "timestamp" : "2024-04-27T00:38:43Z",
+  "count_outdated" : 7346,
+  "uniques_outdated" : 3096,
+  "count" : 7590,
+  "uniques" : 3275,
   "clones" : [
-    {
-      "timestamp": "2024-04-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-14T00:00:00Z",
       "count": 76,
@@ -103,6 +94,15 @@
       "uniques": 50,
       "uniques_minmax": [ 34, 50 ],
       "uniques_decinc": [ 0, 50 ]
+    },
+    {
+      "timestamp": "2024-04-26T00:00:00Z",
+      "count": 44,
+      "count_minmax": [ 44, 44 ],
+      "count_decinc": [ 0, 44 ],
+      "uniques": 33,
+      "uniques_minmax": [ 33, 33 ],
+      "uniques_decinc": [ 0, 33 ]
     }
   ]
 }
