@@ -1,12 +1,7 @@
 {
-  "count": 201,
-  "uniques": 136,
+  "count": 244,
+  "uniques": 163,
   "clones": [
-    {
-      "timestamp": "2024-04-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-14T00:00:00Z",
       "count": 76,
@@ -56,6 +51,11 @@
       "timestamp": "2024-04-25T00:00:00Z",
       "count": 63,
       "uniques": 50
+    },
+    {
+      "timestamp": "2024-04-26T00:00:00Z",
+      "count": 44,
+      "uniques": 33
     }
   ]
 }
